# qr-encrypt

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  Trunk.toml  index.html
src/: common.rs  lib.rs  rtc.rs  worker.rs
