[package]
name = "qr-encrypt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console", 
    "Storage", 
    "Window", 
    "Document", 
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "HtmlVideoElement",
    "Navigator",
    "Event",
    "CustomEvent",
    "CustomEventInit"
] }
yew = { version = "0.21", features = ["csr"] }
rsa = { version = "0.9", features = ["std"], default-features = false }
rand = { version = "0.8", features = ["getrandom"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo = { version = "0.11", features = ["utils", "console"] }
